# 2022.0142

./: AUTHORS  LICENSE  README.md
data/: readme.txt
results/: gen1_detailedResults.xlsx  gen2_detailedResultats.xlsx
src/: BSmarge.cpp  BSmarge.h  BranchBoundDicho.cpp  BranchBoundDicho.h  CMakeLists.txt  ExpandedNetwork.cpp  ExpandedNetwork.h  ExpandedNetworkChemin.cpp  ExpandedNetworkChemin.h  GrapheReduit.cpp  GrapheReduit.h  Instance.cpp  Instance.h  InstanceReduite.cpp  InstanceReduite.h  MIP_flot.cpp  MIP_flot.h  MIP_flot_partiel.cpp  MIP_flot_partiel.h  ModeleLineaire.cpp  ModeleLineaire.h  PL_Optim_RCPSP.cpp  PL_Optim_RCPSP.h  PL_Preempt_dicho.cpp  PL_Preempt_dicho.h  PL_RCPSP_fixeDead.cpp  PL_RCPSP_fixeDead.h  RCPSP_Algo.cpp  RCPSP_Algo.h  RCPSP_Graphe.cpp  RCPSP_Graphe.h  RCPSP_algo_V2.cpp  RCPSP_algo_V2.h  Solution.cpp  Solution.h  callback_MIP_Flot.h  mainBBdicho_V2.cpp  mainRCPSP_Algo_V2.cpp  main_MIPflot_V2.cpp  my_time.h  (+3 more)
src/cmake/: FindCPLEX.cmake
